tests/paczka1/small_fuzzy/40534623.err
Error in line 2: CG0wf S655 69,1
Error in line 6: NWsgTcGtlF S211 45,@
Error in line 8: NWsgTcGtlF S655 19,9
Error in line 15: NWsgTcGtlF A621 52,7
